--- a/src/main/resources/templates/student/ChangePassword.html
+++ b/src/main/resources/templates/student/ChangePassword.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>layout 后台大布局 - Layui</title>
     <link rel="stylesheet" href="/css/layui.css">
-
+    <script src="/jquery-3.4.1.js"></script>
 </head>
 <body class="layui-layout-body">
 
