--- a/src/main/resources/templates/student/Student.html
+++ b/src/main/resources/templates/student/Student.html
@@ -16,11 +16,12 @@
         <ul class="layui-nav layui-layout-right" lay-filter="user">
             <li class="layui-nav-item">
                 <a href="javascript:">
-                    <img src="images/student/njust.jpg" class="layui-nav-img">
+                    <img src="/images/student/njust.jpg" class="layui-nav-img">
                     学生
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a id="changePassword" >修改密码</a></dd>
+                    <dd><a id="SeeImformation" >查看个人信息</a></dd>
 
                 </dl>
             </li>
@@ -36,6 +37,7 @@
                     <dl class="layui-nav-child">
                         <dd><a id="CCFscore" >CCF认证成绩</a></dd>
                         <dd><a id="SelectionScore" >公费选拔成绩</a></dd>
+
 
                     </dl>
                 </li>
