--- a/src/main/resources/templates/student/SubApplication.html
+++ b/src/main/resources/templates/student/SubApplication.html
@@ -5,36 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>layout 后台大布局 - Layui</title>
     <link rel="stylesheet" href="/css/layui.css">
-
+    <script src="/jquery-3.4.1.js"></script>
 </head>
 <body class="layui-layout-body">
 
 <div style="padding: 20px; background-color: #F2F2F2;">
-    <form class="layui-form layui-form-pane" action="" >
+    <form class="layui-form layui-form-pane"  id="eidForm">
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md6 layui-col-md-offset3" >
                 <div class="layui-card" >
                     <div class="layui-card-body">
-                        <div class="layui-form-item" >
-                            <label class="layui-form-label">申请批次</label>
-                            <div class="layui-input-block" style="width: 120px;">
-                                <input type="text" name="eid" id="eid" placeholder="请输入" autocomplete="off"
-                                       class="layui-input"lay-verify="required">
-                            </div>
-                        </div>
-
 <!--                        <div class="layui-form-item" >-->
-<!--                            <label class="layui-form-label">预期分数</label>-->
+<!--                            <label class="layui-form-label">申请批次</label>-->
 <!--                            <div class="layui-input-block" style="width: 120px;">-->
-<!--                                <input type="text" name="" placeholder="请输入" autocomplete="off"-->
-<!--                                       class="layui-input" lay-verify="number">-->
+<!--                                <input type="text" name="eid" id="eid" placeholder="请输入" autocomplete="off"-->
+<!--                                       class="layui-input"lay-verify="required">-->
+<!--                            </div>-->
+<!--                        </div>-->
+                        <div class="layui-form-item" >
+                        <label class="layui-form-label">申请批次</label>
+                        <select id="eid" name="eid" lay-verify="required"  lay-filter="*" class="select">
+                            <option value="" ></option>
+                        </select>
+                        </div>
+<!--                        <div class="layui-form-item">-->
+<!--                            <label class="layui-form-label"申请批次</label>-->
+<!--                            <div class="layui-input-block"style="width: 120px;">-->
+<!--                                <select id="eid" name="eid" lay-filter="*" class="select">-->
+<!--                                    <option value=""></option>-->
+<!--                                </select>-->
 <!--                            </div>-->
 <!--                        </div>-->
 
-
                         <div class="layui-form-item" style="margin: 0px 0px 0px 100px;">
                             <div class="layui-input-block">
-                                <button class="layui-btn" lay-submit lay-filter="reg">提交</button>
+                                <button class="layui-btn" type="submit"lay-submit lay-filter="reg">提交</button>
                                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                             </div>
                         </div>
@@ -55,18 +60,18 @@
             ,layer = layui.layer
             ,layedit = layui.layedit
             ,laydate = layui.laydate;
-
-        //日期
-        laydate.render({
-            elem: '#date'
-        });
-        laydate.render({
-            elem: '#date1'
-        });
-
-        laydate.render({
-            elem: '#test2'
-            ,type: 'year'
+        var $ = layui.jquery;
+        $.ajax({
+            url: '/api/json/available_events',
+            dataType: 'json',
+            type: 'get',
+            success: function (res) {
+                $.each(res.data, function (index, item) {
+                    var text="场次:"+item.eid ;
+                    $('#eidForm').append(new Option(text, item.eid));// 下拉菜单里添加元素
+                });
+                layui.form.render("select");
+            }
         });
 
         //自定义验证规则
@@ -78,24 +83,15 @@
         });
 
         form.on('submit(reg)', function (data) {
-            $.ajax({
-                cache : true,
-                type : "post",
-                url : "/api/json/submit_app",
-                async : true,
-                dataType: 'json',
-                data: data.field,
-                error : function(request) {
-                    layer.msg('提交失败', {icon: 1, time: 1000});
-                },
-                success : function(ret) {
-                    if (ret.success) {
-                        layer.msg('提交成功', {icon: 1, time: 1000});
-                    } else {
-                        layer.msg('提交失败', {icon: 1, time: 1000});
-                    }
+            var eid =$('#eid').val();
+            $.post("/api/json/submit_app", $("#eidForm").serialize(),function (data) {
+                if (data.code===200) {
+                    layer.msg('提交成功', {icon: 1, time: 1000});
+                } else {
+                    layer.msg(data.message, {icon: 5, time: 1000});
                 }
-            })
+            });
+            return false;
         });
 
         return false;
@@ -103,6 +99,5 @@
     });
 
 </script>
-
 </body>
 </html>
