--- a/src/main/resources/templates/student/SubScore.html
+++ b/src/main/resources/templates/student/SubScore.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>layout 后台大布局 - Layui</title>
+    <title>SubScore</title>
     <link rel="stylesheet" href="/css/layui.css">
-
+    <script src="/jquery-3.4.1.js"></script>
 </head>
 <body class="layui-layout-body">
 
 <div style="padding: 20px; background-color: #F2F2F2;">
-    <form class="layui-form layui-form-pane" action="" id="formData">
+    <form class="layui-form layui-form-pane"  id="formData">
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md6 layui-col-md-offset3 layui-col-md-offset3" >
                 <div class="layui-card" >
@@ -72,11 +72,19 @@
                             </div>
                         </div>
 
+                        <div class="layui-form-item" >
+                            <label class="layui-form-label">上传凭证</label>
+                            <div class="layui-input-block" style="width: 200px;">
+                                <input type="file" name="file" id="file" placeholder="请输入" autocomplete="off"
+                                       class="layui-input">
+                            </div>
+                        </div>
 
-                        <button type="button" class="layui-btn" id="test3">
-                            <i class="layui-icon"></i>上传文件
-                        </button>
-                        <input type="hidden" id="url" name="pdf" value=""/>
+
+<!--                        <button type="button" class="layui-btn" id="test3">-->
+<!--                            <i class="layui-icon"></i>上传文件-->
+<!--                        </button>-->
+<!--                        <input type="hidden" id="url" name="pdf" value=""/>-->
 
 <!--                        <div class="layui-upload-drag" id="test10">-->
 <!--                            <i class="layui-icon"></i>-->
@@ -106,6 +114,25 @@
             ,layer = layui.layer
             , $ = layui.jquery;
 
+
+        form.on('submit(reg)', function (data) {
+            var eid =$('#eid').val();
+            var grades =$('#grades').val();
+            var gradesProblem1 =$('#gradesProblem1').val();
+            var gradesProblem2 =$('#gradesProblem2').val();
+            var gradesProblem3 =$('#gradesProblem3').val();
+            var gradesProblem4 =$('#gradesProblem4').val();
+            var gradesProblem5 =$('#gradesProblem5').val();
+            var file =$('#file').val();
+            $.post("/api/json/add_grades_for_review", $("#formData").serialize(),function (data) {
+                if (data.code===200) {
+                    layer.msg('提交成功', {icon: 1, time: 1000});
+                } else {
+                    layer.msg(data.message, {icon: 5, time: 1000});
+                }
+            });
+            return false;
+        });
         //自定义验证规则
         form.verify({
             number1: function(e) {
@@ -117,28 +144,19 @@
                 }
         });
 
-        form.on('submit(reg)', function (data) {
-            $.ajax({
-                cache : true,
-                type : "post",
-                url : "/api/json/add_grades_for_review",
-                async : true,
-                dataType: 'json',
-                data: data.field,
-                error : function(request) {
-                    layer.msg('提交失败', {icon: 1, time: 1000});
-                },
-                success : function(ret) {
-                    if (ret.success) {
-                        layer.msg('提交成功', {icon: 1, time: 1000});
-                    } else {
-                        layer.msg('提交失败', {icon: 1, time: 1000});
-                    }
-                }
-            })
-        });
-
     });
+
+    function dataUpload() {
+        $.post("/api/json/confirm_grades_import", $("#dataUpload").serialize(),
+            function (res) {
+                if(res.code==200){
+                    layer.msg("上传成功");
+                }else
+                {
+                    layer.msg(res.message);
+                }
+            });
+    }
 
     layui.use('upload', function(){
         var $ = layui.jquery
@@ -147,7 +165,7 @@
         upload.render({
             elem: '#test3'
             ,title:'PDF凭证'
-            ,url: '/upload/'
+            ,url: '/test/student/upload'
             ,accept: 'file'
             ,exts:'pdf'
             ,before: function(obj){
@@ -157,16 +175,12 @@
                 });
             }
             ,done: function(res){
-                //上传完毕回调
-                layer.open({
-                    content:'上传成功'
-                });
-            }
-            ,error: function(){
-                //请求异常回调
-                layer.open({
-                    content:'上传失败'
-                });
+                if(res.code==200){
+                    layer.msg("上传成功");
+                }else
+                {
+                    layer.msg(res.message);
+                }
             }
         });
 
