--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -48,30 +48,40 @@
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
         <ul class="layui-nav layui-nav-tree" lay-filter="test">
           <li class="layui-nav-item ">
-            <a>信息录入</a>
+            <a>信息系统</a>
             <dl class="layui-nav-child">
-              <dd><a id="ccfEvent">考试录入</a></dd>
-              <dd><a id="studentEvent">学生录入</a></dd>
-              <dd><a id="gradeEvent">成绩录入</a></dd>
-              <dd><a id="studentImport">学生导入</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item ">
-            <a>成绩审核</a>
-            <dl class="layui-nav-child">
-              <dd><a id="scoreCheck">学生个人成绩</a></dd>
-              <dd><a id="selectEvent">选拔赛成绩</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item ">
-            <a>CCF成绩</a>
-            <dl class="layui-nav-child">
-              <dd><a id="scoreImport">成绩导入</a></dd>
-              <dd><a id="scoreList">成绩列表</a></dd>
+              <dd><a id="ccfEvent">考试信息</a></dd>
+              <dd><a id="studentEvent">学生信息</a></dd>
+              <dd><a id="gradeEvent">成绩信息</a></dd>
               <dd><a id="scoreAnalysis">成绩分析</a></dd>
             </dl>
           </li>
-         
+          <li class="layui-nav-item ">
+            <a>审核系统</a>
+            <dl class="layui-nav-child">
+              <dd><a id="studentCheck">申请列表</a></dd>
+              <dd><a id="scoreCheck">外校成绩</a></dd>
+              <dd><a onclick="download()">红名单下载</a></dd>
+            </dl>
+          </li>
+          <script>
+              function download() {
+                /*
+                /api/json/generate_red_list
+                /api/export_qualified_persons_list
+                */
+              }
+
+
+
+          </script>
+          <li class="layui-nav-item ">
+            <a>信息导入</a>
+            <dl class="layui-nav-child">
+              <dd><a id="scoreImport">成绩导入</a></dd>
+              <dd><a id="studentImport">学生导入</a></dd>
+            </dl>
+          </li>
           <li class="layui-nav-item"><a id="information">个人信息</a></li>
         </ul>
       </div>
