--- a/src/main/resources/templates/teacher/gradeEvent.html
+++ b/src/main/resources/templates/teacher/gradeEvent.html
@@ -149,7 +149,7 @@
                             checkbox: true,
                             fixed: true
                         },{
-                        field: 'eid',
+                        field: 'examNo',
                         title: '考试批次',
                         sort: true
                     },
