--- a/src/main/resources/templates/teacher/studentImport.html
+++ b/src/main/resources/templates/teacher/studentImport.html
@@ -31,7 +31,7 @@
             <i class="layui-icon">&#xe67c;</i>上传名单
         </button>
     </div>
-    <div>
+    <div style="margin-top: 20px">
         <form id="dataUpload">
             <input type="hidden" name="confirmId" id="confirmId">
             <button type="button" class="layui-btn" onclick="dataUpload()">确认上传</button>
