--- a/src/main/resources/templates/teacher/information.html
+++ b/src/main/resources/templates/teacher/information.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="/css/layui.css" media="all">
   <link rel="stylesheet" href="/css/admin.css" media="all">
-  <script src=/static/layui.js"></script>
+    <script src="/layui.js"></script>
 </head>
 
 <style>
@@ -40,8 +40,5 @@
 
 
 </body>
- <script>
- 
- 
- </script>
+
 </html>
